--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Sarshij Karn</title>
+    <title>Sarshij Karn | Electronics Engineer · AI · Cybersecurity · Nepal</title>
     <link rel="canonical" href="https://sarshijkarn.com.np/" />
     <meta
       name="description"
-      content="Welcome to the portfolio of Sarshij Karn — a passionate Electronics, Communication & Information Engineering student. Explore my journey, tech projects, personal interests, and achievements in innovation, trading, and creativity."
+      content="Hello, I'm Sarshij Karn, an Electronics, Communication & Information Engineering student from Nepal. Skilled in electronics, programming and AI. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends."
     />
     <meta
       name="keywords"
-      content="Sarshij Karn, Sarshij, sarshij, sarshij karn, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, portfolio, engineering student, projects, creativity, notes, engineering notes, technology, templates,"
+      content="Sarshij Karn, Sarshij, sarshij, sarshij karn, Electronics Engineer, Stock Market, Investor, Content Creator, Trader, Nepal, Website, Engineering, portfolio, engineering student, projects, creativity, notes, engineering notes, technology, bei, electronics, communication, engineering, Sarshij Karn, Sarshij, sarshij karn, sarshij karn nepal, Sarshij Karn engineer, Sarshij Karn portfolio, Sarshij Karn website, Electronics Engineer Nepal, BEI Electronics Engineering, Electronics Communication Information Engineering, engineering student Nepal, Nepali electronics engineer, Nepali tech creator, AI enthusiast Nepal, cybersecurity learner Nepal, frontend developer Nepal, stock market investor Nepal, trader Nepal, technical content creator, Sarshij projects, Sarshij notes, engineering notes Nepal, BEI notes, technology portfolio Nepal, personal website Nepal, tech portfolio website, Sarshij Karn electronics, Sarshij Karn AI, Sarshij Karn cybersecurity, Sarshij Karn frontend development, Sarshij Karn stock market, Sarshij Karn trader, Sarshij Karn content creator"
     />
     <meta name="author" content="Sarshij Karn" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -25,15 +25,15 @@
     <!-- Open Graph / SEO -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sarshijkarn.com.np/" />
-    <meta property="og:title" content="Sarshij Karn | Engineering · AI · Cybersecurity" />
-    <meta property="og:description" content="Explore the futuristic portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity." />
+    <meta property="og:title" content="Sarshij Karn | Electronics, Communication & Information Engineering · AI · Cybersecurity · Nepal" />
+    <meta property="og:description" content="Explore the futuristic engineering portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends." />
     <meta property="og:image" content="https://sarshijkarn.com.np/assets/og_preview.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://sarshijkarn.com.np/" />
-    <meta property="twitter:title" content="Sarshij Karn | Engineering · AI · Cybersecurity" />
-    <meta property="twitter:description" content="Explore the futuristic portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity." />
+    <meta property="twitter:title" content="Sarshij Karn | Electronics, Communication & Information Engineer · AI · Cybersecurity · Nepal" />
+    <meta property="twitter:description" content="Explore the futuristic portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends." />
     <meta property="twitter:image" content="https://sarshijkarn.com.np/assets/og_preview.png" />
 
     <!-- Standard favicon -->
@@ -52,6 +52,28 @@
         "@type": "Person",
         "name": "Sarshij Karn",
         "url": "https://sarshijkarn.com.np",
+        "image": "https://sarshijkarn.com.np/assets/img/me.webp",
+        "jobTitle": "Electronics, Communication & Information Engineering Student",
+        "affiliation": {
+          "@type": "Tribhuvan University",
+          "name": "BEI, Electronics, Communication & Information Engineering"
+        },
+        "alumniOf": "Tribhuvan University",
+        "gender": "male",
+        "knowsAbout": [
+          "Electronics, Communication & Information Engineering",
+          "Artificial Intelligence",
+          "Cybersecurity",
+          "Frontend Development",
+          "Backend Development",
+          "Fullstack Development",
+          "Machine Learning",
+          "Deep Learning",
+          "Data Science",
+          "Data Analysis",
+          "Data Visualization",
+          "Stock Market Trading"
+        ],
         "sameAs": [
           "https://www.linkedin.com/in/sarshij-karn-1a7766236/",
           "https://facebook.com/sarshij.karn.3",
@@ -59,7 +81,8 @@
           "https://www.instagram.com/sarshijkarn",
           "https://github.com/SarshijKarn",
           "https://youtube.com/@sarshijkarn"
-        ]
+        ],
+        "description": "Electronics, Communication & Information Engineering student specializing in AI, Cybersecurity, and innovation."
       }
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -84,8 +107,6 @@
   </head>
 
   <body class="dark">
-    <!-- Custom Cyber Cursor -->
-    <div id="custom-cursor"></div>
 
     <!-- Cyber Preloader -->
     <div id="preloader">
