--- a/index.html
+++ b/index.html
@@ -133,13 +133,20 @@
     <aside id="sidebar" class="sidebar">
         <div class="sidebar-header">
             <div class="sidebar-profile-container">
-                <img src="assets/img/me.webp" alt="Sarshij Karn" class="sidebar-profile-img">
+                <img src="assets/img/me.webp" alt="Sarshij Karn" class="sidebar-profile-img" loading="lazy">
                 <div class="sidebar-status-dot"></div>
             </div>
             <div class="sidebar-brand">
                 <span class="brand-text">Sarshij</span><span class="brand-dot">.</span>
             </div>
-            <div class="sidebar-role">Electronics Engineer</div>
+            <div class="sidebar-role">Electronics Engineering</div>
+            <!-- Theme Toggle (Moved to Header) -->
+            <button id="themeToggle" class="theme-toggle mt-4" aria-label="Toggle theme">
+                <div class="toggle-track">
+                    <i class="fas fa-sun sun-icon"></i>
+                    <i class="fas fa-moon moon-icon"></i>
+                </div>
+            </button>
         </div>
 
         <nav class="sidebar-nav">
@@ -184,13 +191,6 @@
         </nav>
 
         <div class="sidebar-footer">
-             <!-- Theme Toggle -->
-            <button id="themeToggle" class="theme-toggle" aria-label="Toggle theme">
-                <div class="toggle-track">
-                    <i class="fas fa-sun sun-icon"></i>
-                    <i class="fas fa-moon moon-icon"></i>
-                </div>
-            </button>
             <div class="sidebar-copyright">
                 &copy; 2025 Sarshij
             </div>
@@ -242,8 +242,8 @@
             <!-- Subtitle/Description -->
             <div class="text-lg sm:text-xl md:text-2xl lg:text-3xl mb-4 md:mb-8 neon-cyan font-mono leading-tight">
                 <!-- Mobile: Split lines -->
-                <span class="block md:hidden">· Engineering · Technology</span>
-                <span class="block md:hidden">·Cybersecurity · AI</span>
+                <span class="block md:hidden">·Engineering ·Technology</span>
+                <span class="block md:hidden">·Cybersecurity ·AI</span>
                 <!-- Desktop: Single line -->
                 <span class="hidden md:inline-block typing-text">Engineering · Technology · Cybersecurity · AI</span>
             </div>
@@ -287,7 +287,7 @@
         <div class="hero-image-right pointer-events-none select-none">
              <div class="hero-img-overlay"></div>
              <!-- MAIN HERO IMAGE: Change 'src' here to update the photo -->
-             <img src="assets/img/fullME-removebg-min.png" alt="Sarshij Karn" class="full-body-img">
+             <img src="assets/img/fullME-optimized.webp" alt="Sarshij Karn" class="full-body-img">
         </div>
 
         <!-- Scroll Down Indicator (Bouncing Arrow) -->
