--- a/index.html
+++ b/index.html
@@ -997,10 +997,19 @@
                 <i class="fas fa-phone contact-icon"></i>
               </div>
               <h3 class="contact-label">Phone</h3>
-              <p class="contact-value" data-copy="+977 9863918187">
+              <a
+                href="tel:+9779863918187"
+                class="contact-value"
+                style="
+                  text-decoration: none;
+                  color: inherit;
+                  display: block;
+                  margin-bottom: 0.5rem;
+                "
+              >
                 +977 9863918187
-              </p>
-              <div class="click-hint">Click to copy</div>
+              </a>
+              <div class="click-hint">Click to call</div>
             </div>
             <div class="card-particles"></div>
           </div>
@@ -1012,10 +1021,21 @@
                 <i class="fas fa-map-marker-alt contact-icon"></i>
               </div>
               <h3 class="contact-label">Location</h3>
-              <p class="contact-value" data-copy="Kathmandu, Nepal">
+              <a
+                href="https://www.google.com/maps/place/National+College+Of+Engineering/@27.655790327766975,85.31767720956154,17z/data=!3m1!4b1!4m6!3m5!1s0x39eb177db2f5b88d:0xa7de95ca9dd9ad6c!8m2!3d27.6557903!4d85.3202521!16s%2Fg%2F11c5d4n7wf"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="contact-value"
+                style="
+                  text-decoration: none;
+                  color: inherit;
+                  display: block;
+                  margin-bottom: 0.5rem;
+                "
+              >
                 Kathmandu, Nepal
-              </p>
-              <div class="click-hint">Click to copy</div>
+              </a>
+              <div class="click-hint">View on map</div>
             </div>
             <div class="card-particles"></div>
           </div>
@@ -1034,7 +1054,7 @@
               >
                 sarshijkarn.com.np
               </a>
-              <div class="click-hint">Visit site</div>
+              <div class="click-hint">Recursion</div>
             </div>
             <div class="card-particles"></div>
           </div>
