--- a/index.html
+++ b/index.html
@@ -464,52 +464,85 @@
           <span class="heading-highlight">Skills & Expertise</span>
         </h2>
         <div
-          class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6"
+          class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6"
         >
-          <!-- Programming -->
+          <!-- 1. Programming & Software Engineering -->
           <div class="card rounded-xl p-6 text-center card-3d">
             <i class="fas fa-code text-4xl neon-purple mb-4"></i>
             <h3 class="text-xl font-semibold mb-3">Programming</h3>
             <div class="text-sm space-y-1">
-              <div>C,</div>
-              <div>C++,</div>
               <div>Python</div>
+              <div>C/C++</div>
+              <div>JavaScript</div>
+              <div>Git & GitHub</div>
             </div>
           </div>
 
-          <!-- AI & Machine Learning -->
+          <!-- 2. Web & Platform Development -->
           <div class="card rounded-xl p-6 text-center card-3d">
-            <i class="fas fa-brain text-4xl neon-cyan mb-4"></i>
+            <i class="fas fa-globe text-4xl neon-cyan mb-4"></i>
+            <h3 class="text-xl font-semibold mb-3">Web & Platforms</h3>
+            <div class="text-sm space-y-1">
+              <div>HTML5, CSS3, JS</div>
+              <div>Responsive UI</div>
+              <div>Domain & hosting</div>
+              <div>Frontend optimization</div>
+              <div>Project deployment</div>
+            </div>
+          </div>
+
+          <!-- 3. AI & Machine Learning -->
+          <div class="card rounded-xl p-6 text-center card-3d">
+            <i class="fas fa-brain text-4xl neon-purple mb-4"></i>
             <h3 class="text-xl font-semibold mb-3">AI & ML</h3>
             <div class="text-sm space-y-1">
-              <div>TensorFlow, Keras,</div>
-              <div>OpenCV, MediaPipe,</div>
+              <div>Machine Learning</div>
+              <div>Deep Learning basics</div>
+              <div>TensorFlow, Keras</div>
+              <div>OpenCV, MediaPipe</div>
               <div>Prompt Engineering</div>
+              <div>AI Agents</div>
             </div>
           </div>
 
-          <!-- Electronics -->
+          <!-- 4. Electronics Engineering -->
           <div class="card rounded-xl p-6 text-center card-3d">
-            <i class="fas fa-microchip text-4xl neon-purple mb-4"></i>
+            <i class="fas fa-microchip text-4xl neon-cyan mb-4"></i>
             <h3 class="text-xl font-semibold mb-3">Electronics</h3>
             <div class="text-sm space-y-1">
-              <div>Arduino, Circuit Simulation,</div>
-              <div>Signals & Systems,</div>
-              <div>PCB Design</div>
+              <div>Analog & Digital</div>
+              <div>Signals & Systems</div>
+              <div>Circuit simulation</div>
+              <div>Arduino & MCUs</div>
+              <div>PCB design</div>
             </div>
           </div>
 
-          <!-- Cybersecurity -->
+          <!-- 5. Cybersecurity -->
           <div class="card rounded-xl p-6 text-center card-3d">
-            <i class="fas fa-shield-alt text-4xl neon-cyan mb-4"></i>
+            <i class="fas fa-shield-alt text-4xl neon-purple mb-4"></i>
             <h3 class="text-xl font-semibold mb-3">Cybersecurity</h3>
             <div class="text-sm space-y-1">
-              <div>Linux Scripting,</div>
-              <div>Learning Ethical Hacking,</div>
-              <div>Terminal Operations</div>
+              <div>Linux security</div>
+              <div>Ethical hacking (learning)</div>
+              <div>Terminal operations</div>
+              <div>Security tools</div>
+              <div>Automation for security</div>
             </div>
           </div>
-        </div>
+
+          <!-- 6. Tools & Automation -->
+          <div class="card rounded-xl p-6 text-center card-3d">
+            <i class="fas fa-toolbox text-4xl neon-cyan mb-4"></i>
+            <h3 class="text-xl font-semibold mb-3">Tools & Automation</h3>
+            <div class="text-sm space-y-1">
+              <div>VS Code, IDEs</div>
+              <div>PowerShell scripting</div>
+              <div>Task automation</div>
+              <div>Workflow optimization</div>
+              <div>System utilities</div>
+            </div>
+          </div>
 
         </div>
       </div>
