--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <meta property="og:url" content="https://sarshijkarn.com.np/" />
     <meta property="og:title" content="Sarshij Karn | Electronics, Communication & Information Engineering · AI · Cybersecurity · Nepal" />
     <meta property="og:description" content="Explore the futuristic engineering portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends." />
-    <meta property="og:image" content="https://sarshijkarn.com.np/assets/og_preview.png" />
+    <meta property="og:image" content="https://sarshijkarn.com.np/assets/og_preview.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://sarshijkarn.com.np/" />
     <meta property="twitter:title" content="Sarshij Karn | Electronics, Communication & Information Engineer · AI · Cybersecurity · Nepal" />
     <meta property="twitter:description" content="Explore the futuristic portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends." />
-    <meta property="twitter:image" content="https://sarshijkarn.com.np/assets/og_preview.png" />
+    <meta property="twitter:image" content="https://sarshijkarn.com.np/assets/og_preview.jpg" />
 
     <!-- Standard favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
