--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>
-      Sarshij Karn | Electronics Engineer · AI · Cybersecurity · Nepal
+      Sarshij Karn | Electronics Engineer · AI · Cybersecurity
     </title>
     <link rel="canonical" href="https://sarshijkarn.com.np/" />
     <meta
       name="description"
-      content="Hello, I'm Sarshij Karn, an Electronics, Communication & Information Engineering student from Nepal. Skilled in electronics, programming and AI. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends."
+      content="Electronics and AI-focused engineering student from Nepal with strong skills in cybersecurity, programming, and modern tech systems. Building future-ready solutions."
     />
     <meta
       name="keywords"
@@ -30,11 +30,11 @@
     <meta property="og:url" content="https://sarshijkarn.com.np/" />
     <meta
       property="og:title"
-      content="Sarshij Karn | Electronics, Communication & Information Engineering · AI · Cybersecurity · Nepal"
+      content="Sarshij Karn | Electronics Engineer · AI · Cybersecurity"
     />
     <meta
       property="og:description"
-      content="Explore the futuristic engineering portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends."
+      content="Electronics engineering student from Nepal focused on AI, cybersecurity, and modern technology systems."
     />
     <meta
       property="og:image"
@@ -44,11 +44,11 @@
     <meta property="twitter:url" content="https://sarshijkarn.com.np/" />
     <meta
       property="twitter:title"
-      content="Sarshij Karn | Electronics, Communication & Information Engineer · AI · Cybersecurity · Nepal"
+      content="Sarshij Karn | Electronics Engineer · AI · Cybersecurity"
     />
     <meta
       property="twitter:description"
-      content="Explore the futuristic portfolio of Sarshij Karn. Passionate engineer dedicated to Electronics, AI, and Cybersecurity. I like to stay ahead of the curve by actively exploring AI tools and keeping up with emerging tech trends."
+      content="Electronics engineering student from Nepal specializing in AI, cybersecurity, and emerging technologies."
     />
     <meta
       property="twitter:image"
