pagespeed insigts and ui/ux optimize

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://sarshijkarn.com.np/" />
     <meta
       name="description"
-      content="Electronics and AI-focused engineering student from Nepal with strong skills in cybersecurity, programming, and modern tech systems. Building future-ready solutions."
+      content="Electronics & AI-focused engineer from Nepal skilled in cybersecurity, programming, and tech systems. Building future-ready solutions."
     />
     <meta
       name="keywords"
@@ -54,25 +54,25 @@
       property="twitter:image"
       content="https://sarshijkarn.com.np/assets/og_preview.jpg"
     />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="icon"
       type="image/webp"
       sizes="32x32"
-      href="/favicon-32x32.webp"
+      href="favicon-32x32.webp"
     />
     <link
       rel="icon"
       type="image/webp"
       sizes="48x48"
-      href="/favicon-48x48.webp"
+      href="favicon-48x48.webp"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/apple-touch-icon.webp"
+      href="apple-touch-icon.webp"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="site.webmanifest" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -248,31 +248,25 @@
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
     <section id="home" class="min-h-screen flex relative overflow-hidden">
       <div
-        class="hero-content-left z-10 flex flex-col justify-start px-6 md:px-12 lg:pl-10 w-full lg:w-1/2 pt-[45vh] lg:pt-[28vh]"
+        class="hero-content-left z-10 flex flex-col justify-start px-6 md:px-12 lg:px-16 w-full lg:w-full xl:w-full pt-[45vh] lg:pt-[28vh]"
       >
-        <div class="flex items-center flex-nowrap gap-2 mb-2">
+        <div class="mb-2">
           <h1
             id="hero-name"
-            class="glitch hero-title glow-special text-4xl sm:text-5xl md:text-6xl lg:text-6xl xl:text-7xl font-black m-0 whitespace-nowrap"
+            class="glitch hero-title glow-special text-4xl sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl font-black m-0"
             data-text="SARSHIJ KARN"
           >
-            SARSHIJ KARN
+            <div class="inline-flex flex-wrap lg:flex-nowrap items-center"><span class="inline-block mr-3 jumble-text" data-text="SARSHIJ">SARSHIJ</span><span class="inline-block whitespace-nowrap"><span class="jumble-text" data-text="KARN">KARN</span><span class="inline-flex items-center gap-3 ml-3 align-middle">
+              <i
+                class="fas fa-check-circle text-3xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-6xl seo-verified-check"
+              ></i
+              ><i
+                id="pronounce-name"
+                class="fas fa-volume-up text-3xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-6xl cursor-pointer hover:text-purple-400 transition-colors seo-white-icon"
+                title="Click to hear pronunciation"
+              ></i>
+            </span></span></div>
           </h1>
-          <div class="flex items-center gap-1 flex-shrink-0">
-            <i
-              class="fas fa-check-circle text-2xl sm:text-3xl md:text-4xl lg:text-4xl xl:text-5xl"
-              style="
-                color: #1877f2;
-                filter: drop-shadow(0 0 10px rgba(24, 119, 242, 0.6));
-              "
-            ></i
-            ><i
-              id="pronounce-name"
-              class="fas fa-volume-up text-2xl sm:text-3xl md:text-4xl lg:text-4xl xl:text-5xl cursor-pointer hover:text-purple-400 transition-colors"
-              style="color: #ffffff"
-              title="Click to hear pronunciation"
-            ></i>
-          </div>
         </div>
         <div
           class="text-lg sm:text-xl md:text-2xl lg:text-3xl mb-4 md:mb-8 neon-cyan font-mono leading-tight"
@@ -322,7 +316,7 @@
           ></a>
         </div>
         <div
-          class="flex flex-col sm:flex-row gap-4 mt-auto mb-16 md:mb-16 w-full sm:w-auto"
+          class="flex flex-wrap items-center gap-4 mt-2 sm:mt-4"
         >
           <a
             href="assets/Sarshij-Karn-Resume.pdf"
@@ -886,8 +880,8 @@
         <div class="timeline">
           <div class="timeline-item">
             <div class="card rounded-xl p-6 md:ml-8">
-              <div class="circuit-line" style="top: 50%; width: 100px"></div>
-              <h3 class="text-xl font-semibold mb-2">
+              <div class="circuit-line seo-circuit-line"></div>
+              <h3 class="text-xl font-semibold mb-3">
                 Bachelor's in Electronics, Communication and Information
                 Engineering
               </h3>
@@ -902,7 +896,7 @@
           </div>
           <div class="timeline-item">
             <div class="card rounded-xl p-6 md:ml-8">
-              <div class="circuit-line" style="top: 50%; width: 100px"></div>
+              <div class="circuit-line seo-circuit-line"></div>
               <h3 class="text-xl font-semibold mb-2">Grade XII (NEB)</h3>
               <div class="text-purple-400 mb-2">
                 Liverpool International College • 2023
@@ -918,7 +912,7 @@
           </div>
           <div class="timeline-item">
             <div class="card rounded-xl p-6 md:ml-8">
-              <div class="circuit-line" style="top: 50%; width: 100px"></div>
+              <div class="circuit-line seo-circuit-line"></div>
               <h3 class="text-xl font-semibold mb-2">Grade X (NEB)</h3>
               <div class="text-purple-400 mb-2">
                 Happyland Secondary School • 2021
@@ -979,11 +973,11 @@
           </div>
           <div class="card rounded-xl p-6 text-center card-3d">
             <i class="fas fa-running text-4xl neon-cyan mb-4"></i>
-            <h3 class="text-lg font-semibold">Playing Sports</h3>
+            <h3 class="text-xl font-semibold mb-3 text-white">Playing Sports</h3>
           </div>
           <div class="card rounded-xl p-6 text-center card-3d">
             <i class="fas fa-book text-4xl neon-purple mb-4"></i>
-            <h3 class="text-lg font-semibold">Reading Books</h3>
+            <h3 class="text-xl font-semibold mb-3 text-white">Reading Books</h3>
           </div>
           <div class="card rounded-xl p-6 text-center card-3d">
             <i class="fas fa-code text-4xl neon-cyan mb-4"></i>
@@ -1015,13 +1009,7 @@
               <h3 class="contact-label">Email</h3>
               <a
                 href="mailto:sarshijkarn333@gmail.com"
-                class="contact-value"
-                style="
-                  text-decoration: none;
-                  color: inherit;
-                  display: block;
-                  margin-bottom: 0.5rem;
-                "
+                class="contact-value seo-contact-link"
               >
                 sarshijkarn333@gmail.com
               </a>
@@ -1037,13 +1025,7 @@
               <h3 class="contact-label">Phone</h3>
               <a
                 href="tel:+9779863918187"
-                class="contact-value"
-                style="
-                  text-decoration: none;
-                  color: inherit;
-                  display: block;
-                  margin-bottom: 0.5rem;
-                "
+                class="contact-value seo-contact-link"
               >
                 +977 9863918187
               </a>
@@ -1061,13 +1043,7 @@
                 href="https://www.google.com/maps/place/National+College+Of+Engineering/@27.655790327766975,85.31767720956154,17z/data=!3m1!4b1!4m6!3m5!1s0x39eb177db2f5b88d:0xa7de95ca9dd9ad6c!8m2!3d27.6557903!4d85.3202521!16s%2Fg%2F11c5d4n7wf"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="contact-value"
-                style="
-                  text-decoration: none;
-                  color: inherit;
-                  display: block;
-                  margin-bottom: 0.5rem;
-                "
+                class="contact-value seo-contact-link"
               >
                 Kathmandu, Nepal
               </a>
@@ -1155,24 +1131,10 @@
             </div>
             <div id="contactTerminal" class="contact-terminal">
               <div
-                class="terminal-header"
-                style="
-                  display: flex;
-                  justify-content: space-between;
-                  align-items: center;
-                  margin-bottom: 15px;
-                  border-bottom: 1px solid #333;
-                  padding-bottom: 5px;
-                "
+                class="terminal-header seo-terminal-header"
               >
                 <span
-                  class="terminal-title"
-                  style="
-                    color: #8a2be2;
-                    font-size: 0.8rem;
-                    text-transform: uppercase;
-                    font-family: &quot;Orbitron&quot;, sans-serif;
-                  "
+                  class="terminal-title seo-terminal-title"
                   >Secure Terminal</span
                 ><button
                   id="terminalHelp"
