--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Fira+Code:wght@300;400;500&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css?v=3.0" />
-    <link rel="stylesheet" href="project-icons.css?v=3.0" />
+    <link rel="stylesheet" href="style.css?v=4.0" />
+    <link rel="stylesheet" href="project-icons.css?v=4.0" />
   </head>
   <body class="dark">
     <div id="preloader">
@@ -145,7 +145,7 @@
       <span class="hamburger-line"></span><span class="hamburger-line"></span
       ><span class="hamburger-line"></span>
     </button>
-    <aside id="sidebar" class="sidebar">
+    <aside id="sidebar" class="sidebar" aria-label="Sidebar Navigation">
       <div class="sidebar-header">
         <div class="sidebar-profile-container">
           <div class="sidebar-avatar-wrapper">
@@ -246,6 +246,7 @@
       </div>
     </aside>
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
+    <main>
     <section id="home" class="min-h-screen flex relative overflow-hidden">
       <div
         class="hero-content-left z-10 flex flex-col justify-start px-6 md:px-12 lg:px-16 w-full lg:w-full xl:w-full pt-[45vh] lg:pt-[28vh]"
@@ -256,7 +257,7 @@
             class="glitch hero-title glow-special text-4xl sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl font-black m-0"
             data-text="SARSHIJ KARN"
           >
-            <div class="inline-flex flex-wrap lg:flex-nowrap items-center"><span class="inline-block mr-3 jumble-text" data-text="SARSHIJ">SARSHIJ</span><span class="inline-block whitespace-nowrap"><span class="jumble-text" data-text="KARN">KARN</span><span class="inline-flex items-center gap-3 ml-3 align-middle">
+            <div class="inline-flex flex-wrap lg:flex-nowrap items-center"><span class="inline-block mr-3 jumble-text" data-text="SARSHIJ">SARSHIJ </span><span class="inline-block whitespace-nowrap"><span class="jumble-text" data-text="KARN"> KARN</span><span class="inline-flex items-center gap-3 ml-3 align-middle">
               <i
                 class="fas fa-check-circle text-3xl sm:text-4xl md:text-5xl lg:text-5xl xl:text-6xl seo-verified-check"
               ></i
@@ -1240,6 +1241,7 @@
         <i class="fas fa-check-circle"></i><span>Copied to clipboard!</span>
       </div>
     </section>
+    </main>
     <footer class="py-8 px-6 border-t border-gray-800">
       <div class="max-w-6xl mx-auto text-center">
         <div class="text-gray-400 space-y-1">
