--- a/index.html
+++ b/index.html
@@ -278,41 +278,41 @@
             >Engineering · Technology · Cybersecurity · AI</span
           >
         </div>
-        <div class="flex space-x-6 mb-6 md:mb-10">
+        <div class="flex space-x-6 mb-6 md:mb-10 relative z-10 filter drop-shadow-lg">
           <a
             href="https://github.com/SarshijKarn"
             target="_blank"
             aria-label="GitHub"
-            class="social-icon text-gray-400 hover:text-purple-400 text-3xl transition-all duration-300 transform hover:scale-110 hover:drop-shadow-lg"
+            class="profile-link text-gray-400 hover:text-purple-400 text-3xl transition-all duration-300 transform hover:scale-125 hover:rotate-6"
             ><i class="fab fa-github"></i></a
           ><a
             href="https://www.linkedin.com/in/sarshij-karn-1a7766236/"
             target="_blank"
             aria-label="LinkedIn"
-            class="social-icon text-gray-400 hover:text-blue-400 text-3xl transition-all duration-300 transform hover:scale-110 hover:drop-shadow-lg"
+            class="profile-link text-gray-400 hover:text-blue-400 text-3xl transition-all duration-300 transform hover:scale-125 hover:rotate-6"
             ><i class="fab fa-linkedin"></i></a
           ><a
             href="https://x.com/sarshijkarn"
             target="_blank"
             aria-label="X / Twitter"
-            class="social-icon text-gray-400 hover:text-blue-400 text-3xl transition-all duration-300 transform hover:scale-110 hover:drop-shadow-lg"
+            class="profile-link text-gray-400 hover:text-blue-400 text-3xl transition-all duration-300 transform hover:scale-125 hover:rotate-6"
             ><i class="fab fa-twitter"></i></a
           ><a
             href="https://www.instagram.com/sarshijkarn"
             target="_blank"
             aria-label="Instagram"
-            class="social-icon text-gray-400 hover:text-pink-400 text-3xl transition-all duration-300 transform hover:scale-110 hover:drop-shadow-lg"
+            class="profile-link text-gray-400 hover:text-pink-400 text-3xl transition-all duration-300 transform hover:scale-125 hover:rotate-6"
             ><i class="fab fa-instagram"></i></a
           ><a
             href="https://youtube.com/@sarshijkarn"
             target="_blank"
             aria-label="YouTube"
-            class="social-icon text-gray-400 hover:text-red-500 text-3xl transition-all duration-300 transform hover:scale-110 hover:drop-shadow-lg"
+            class="profile-link text-gray-400 hover:text-red-500 text-3xl transition-all duration-300 transform hover:scale-125 hover:rotate-6"
             ><i class="fab fa-youtube"></i></a
           ><a
             href="mailto:sarshijkarn333@gmail.com"
             aria-label="Email"
-            class="social-icon text-gray-400 hover:text-green-400 text-3xl transition-all duration-300 transform hover:scale-110 hover:drop-shadow-lg"
+            class="profile-link text-gray-400 hover:text-green-400 text-3xl transition-all duration-300 transform hover:scale-125 hover:rotate-6"
             ><i class="fas fa-envelope"></i
           ></a>
         </div>
