HIGHEST PAGESPEED SCORE

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <p class="preloader-text">Initializing Neural Link...</p>
       </div>
     </div>
-    <video autoplay loop muted playsinline id="bg-video" preload="none">
+    <video autoplay loop muted playsinline id="bg-video" preload="none" poster="assets/og_preview.jpg">
       <source src="assets/galaxy.mp4" type="video/mp4" /></video
     ><button
       id="mobileMenuBtn"
@@ -547,7 +547,6 @@
               <div>Python</div>
               <div>C/C++</div>
               <div>JavaScript</div>
-              <div>Git & GitHub</div>
             </div>
           </div>
           <div class="card rounded-xl p-6 text-center card-3d">
@@ -602,7 +601,7 @@
               <div>VS Code, IDEs</div>
               <div>PowerShell scripting</div>
               <div>Task automation</div>
-              <div>Workflow optimization</div>
+              <div>Git & GitHub</div>
               <div>System utilities</div>
             </div>
           </div>
