--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </ul>
       </nav>
       <div class="sidebar-footer">
-        <div class="sidebar-copyright">&copy; 2026 Sarshij</div>
+        <div class="sidebar-copyright">&copy; Sis: Alexa Karna </div>
       </div>
     </aside>
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
@@ -674,7 +674,7 @@
               ><a
                 href="https://github.com/SarshijKarn/Reddit-Data-Scraper"
                 class="bg-cyan-600 hover:bg-cyan-700 px-2 py-1 md:px-4 md:py-2 rounded-lg transition-colors text-[10px] md:text-sm"
-                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Documentation
+                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Demo
               </a>
             </div>
           </div>
@@ -771,7 +771,7 @@
                 href="https://github.com/SarshijKarn/Emotion-Detection-Model"
                 target="_blank"
                 class="bg-cyan-600 hover:bg-cyan-700 px-2 py-1 md:px-4 md:py-2 rounded-lg transition-colors text-[10px] md:text-sm"
-                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Documentation
+                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Demo
               </a>
             </div>
           </div>
@@ -804,7 +804,7 @@
               ><a
                 href="https://github.com/SarshijKarn/Gesture-Based-Calculator"
                 class="bg-cyan-600 hover:bg-cyan-700 px-2 py-1 md:px-4 md:py-2 rounded-lg transition-colors text-[10px] md:text-sm"
-                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Documentation
+                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Demo
               </a>
             </div>
           </div>
@@ -832,7 +832,7 @@
               ><a
                 href="https://github.com/SarshijKarn/YouTube-Bulk-Unsubscriber-Python-Tkinter-GUI-"
                 class="bg-cyan-600 hover:bg-cyan-700 px-2 py-1 md:px-4 md:py-2 rounded-lg transition-colors text-[10px] md:text-sm"
-                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Documentation
+                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Demo
               </a>
             </div>
           </div>
@@ -867,7 +867,7 @@
               ><a
                 href="https://github.com/SarshijKarn/Youtube-Playlist-Downloader"
                 class="bg-cyan-600 hover:bg-cyan-700 px-2 py-1 md:px-4 md:py-2 rounded-lg transition-colors text-[10px] md:text-sm"
-                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Documentation
+                ><i class="fas fa-file-alt mr-1 md:mr-2"></i>Demo
               </a>
             </div>
           </div>
